--- a/totalhr.web/Content/Site.css
+++ b/totalhr.web/Content/Site.css
@@ -325,3 +325,22 @@ div.wide {
     text-align: left;
     padding: 1%;
 }
+.line input[type="text"].datetype {
+    width:130px;background:transparent url('/content/images/cal.gif') right center no-repeat;padding-right:16px;
+}
+
+.formwide {
+     float:left;
+     width:98%;
+     padding:1%;
+     text-align:left;
+}
+
+    .formwide .line {
+         float:left;
+         width:100%;
+         text-align:left;
+    }
+        .formwide .line label {
+            width:auto;
+        }
