--- a/totalhr.web/Views/Shared/_DocumentSearch.cshtml
+++ b/totalhr.web/Views/Shared/_DocumentSearch.cshtml
@@ -9,16 +9,16 @@
 
     var lstFileTypes = Enum.GetValues(typeof(Variables.AllowedFileExtension)).Cast<Variables.AllowedFileExtension>().Select(v => new SelectListItem
     {
-        Text = EnumExtensions.Description(v),
+        Text = EnumExtensions.FileType(v),
         Value = v.ToString()
-    });
+    }).ToList();
 
-    //lstFileTypes.Join(new List<SelectListItem> {{ Value = "0", Text = Document.v_Select }});
+    lstFileTypes.Insert(0, new SelectListItem { Value = "0", Text = Document.v_Select });
     
 }
 <div id="searchbox">
      <fieldset>
-       <legend>Document Search</legend>                  
+       <legend>@Document.V_Document_Search<span class="icon">&nbsp;</span></legend>                  
                
           
 @using (Html.BeginForm("Search", "Document"))
@@ -34,9 +34,23 @@
 			         <b>@Document.V_DisplayName</b>
                    </td>
                    <td>
-                        @Html.TextBoxFor(x => x.Name)                   
-                       
+                        @Html.TextBoxFor(x => x.Name)
                    </td>
+                   
+                    <td>                       
+                        <b>@Document.V_Created_After</b>
+                    </td>
+                    <td> 
+                        @Html.TextBox("StartDate", defaultStartDate, new { @class = "datetype", onclick = "javascript:NewCal('StartDate','ddmmyyyy',true,24)" })
+                    </td>
+                    <td>
+                        <b>@Document.V_Created_Before</b> 
+                    </td>
+                    <td>
+                        @Html.TextBox("EndDate", defaultEndDate, new { @class = "datetype", onclick = "javascript:NewCal('EndDate','ddmmyyyy',true,24)" })
+                    </td>
+               </tr>
+                <tr> 
                    <td>
                     <b>@Document.V_Folder</b>
                    </td>
@@ -49,28 +63,14 @@
                    <td>                      
                        @Html.DropDownListFor(x => x.AuthorId, Model.Contributors )
                    </td>
-                <td>
-                <b>@Document.V_File_Type</b>
-                    </td>
-                <td>
-                   @* @Html.DropDownListFor(x => x.FileTypeId,  new SelectList(folders, "Id", "DisplayName"))*@
-                    @Html.DropDownListFor(x => x.FolderId,  lstFileTypes)
-                    </td>
-                </tr>
-                <tr> 
-                    <td>               
-                <b>@Document.V_Dates_Between</b>
-                       
-                @Document.V_Start</td>
-                    <td> 
-                        @Html.TextBoxFor(x => x.StartDate, defaultStartDate, new { @class = "datetype", onclick = "javascript:NewCal('StartDate','ddmmyyyy',true,24)" }) 
+                    <td>
+                        <b>@Document.V_File_Type</b>
                     </td>
                     <td>
-                    @Document.V_End 
-                       </td>
-                  <td>
-                        @Html.TextBoxFor(x => x.EndDate, defaultEndDate, new { @class = "datetype", onclick = "javascript:NewCal('EndDate','ddmmyyyy',true,24)" })
-                        </td>
+                        @Html.DropDownListFor(x => x.FolderId,  lstFileTypes)
+                    </td>                
+                    
+                   
                 </tr>
                 </table>
              
@@ -78,7 +78,8 @@
              </div>
 
             <div class="line">  
-                <input type="submit" value="@Document.V_Search" />
+                <input type="submit" value="@Document.V_Search" />&nbsp;
+                <input type="button" value="@Document.V_Reset" onclick="document.location.href='/Document/'" />
             </div>
        </div>
         
