--- a/totalhr.web/Views/Shared/_PopupLayout.cshtml
+++ b/totalhr.web/Views/Shared/_PopupLayout.cshtml
@@ -26,7 +26,9 @@
               </div>
         </div> 
         
-        @RenderBody()
+        <div id="popupBody">
+            @RenderBody()
+         </div>
             
         </div>
     </div>
