--- a/totalhr.web/Views/Shared/_Layout.cshtml
+++ b/totalhr.web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,9 @@
 <body>
     @RenderBody()
 
-    <div id="dvPopup" style="display: none;"> 
+    <div id="overlay-mask" style="display:none"></div>
+
+    <div id="dvPopup" style="display:none;"> 
         <iframe id="ipopup"></iframe>       
     </div>
 
