--- a/totalhr.web/areas/Admin/Views/Home/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/Home/Index.cshtml
@@ -1,5 +1,30 @@
-﻿@{
-    ViewBag.Title = "Index";
+﻿@using totalhr.Resources;
+
+@{
+    ViewBag.Title = AdminGeneric.V_Admin_Home_Title;    
 }
 
-<h2>Admin Index</h2>
+<div id="main">
+    <div class="content">
+
+        <h1>@AdminGeneric.V_Admin_Home_Title</h1>
+
+        <div id="dvAccount" class="itemlist">
+
+            <div class="option" onclick="document.location.href='/Admin/Profile/'">
+                <h4>@AdminGeneric.V_Profile_Management</h4>
+                <div class="cont">
+
+                </div>
+            </div>
+
+            <div class="option" onclick="document.location.href='/Admin/Role/'">
+                <h4>@AdminGeneric.V_Role_Management</h4>
+                <div class="cont">
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
