--- a/totalhr.web/areas/Admin/Content/css/SiteAdmin.css
+++ b/totalhr.web/areas/Admin/Content/css/SiteAdmin.css
@@ -354,3 +354,12 @@ div.wide {
     width: 100% !important;
     min-height:800px;
 }
+
+table.tabsimple {
+    border-collapse:collapse;
+}
+
+    table.tabsimple tr td, table.tabsimple tr th {
+        padding:3px;
+        text-align:left;
+    }
