--- a/totalhr.web/areas/Admin/Views/Home/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/Home/Index.cshtml
@@ -25,6 +25,13 @@
                 </div>
             </div>
 
+            <div class="option" onclick="document.location.href='/Admin/User/'">
+                <h4>@AdminGeneric.V_User_Management</h4>
+                <div class="cont">
+
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
