--- a/totalhr.web/areas/Admin/Views/Role/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/Role/Index.cshtml
@@ -1,6 +1,64 @@
-﻿@{
-    ViewBag.Title = "Index";
-    
+﻿@using totalhr.Resources;
+@using totalhr.web.Areas.Admin.Helpers;
+
+@model IEnumerable<totalhr.data.EF.Role>
+
+@{
+    ViewBag.Title = AdminGeneric.V_Role_Management;
+   
+ }
+
+@section breadcrumb{
+    <a href="/Admin/" title="@AdminGeneric.V_Home">@AdminGeneric.V_Home</a> &gt;
+    <span class="last">@AdminGeneric.V_Role_List</span>
 }
 
-<h2>Index</h2>
+   <h1>@AdminGeneric.V_Role_Management</h1>
+ <div class="wide">
+     <p>
+         @AdminGeneric.V_List_Of_Roles_Intro
+     </p>
+ </div>
+   <div class="wide">
+     
+        <table border="1" class="tabsimple">
+            <tr>
+                <th>@AdminGeneric.V_Name</th>
+                <th>@AdminGeneric.V_Description</th>
+                <th>@AdminGeneric.V_Created_On</th>
+                <th>@AdminGeneric.V_Created_By</th>
+                <th>@AdminGeneric.V_Last_Modified_By</th>
+                <th>@AdminGeneric.V_Last_Modified</th>
+                <th>@AdminGeneric.V_Users</th>
+            </tr>
+            @foreach(var role in Model){
+            <tr>
+                <td>
+                   @role.Name
+                </td>
+                <td>
+                   @role.Description
+                </td>
+                <td>
+                    @role.Created.ToShortDateString()               
+                </td>
+                <td>
+                    @(role.User.firstname + " " + role.User.surname)
+                </td>
+                <td>
+                    @role.LastModified
+                </td>
+                <td>
+                    @((role.LastModifiedBy != null)? role.User1.firstname + " " + role.User1.surname : "")
+                </td>
+                <td>
+                    <input type="button" class="edit" value="@AdminGeneric.V_View_Users" onclick="NavigateTo('/Admin/Role/ViewUsers/@role.id');" />
+                </td>
+            </tr>            
+            }
+        </table>
+
+
+    </div>
+
+
