--- a/totalhr.web/areas/Admin/Content/css/SiteAdmin.css
+++ b/totalhr.web/areas/Admin/Content/css/SiteAdmin.css
@@ -381,3 +381,24 @@ table.tabsimple {
     min-height:300px;
     min-width:250px;
 }
+
+#searchbox {
+    float:left;
+    width:800px;
+    font: 0.80em/1.13em "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+}
+
+    #searchbox input[type='submit'], #searchbox select, #searchbox input[type='text'], #searchbox input[type='button'] {
+        float: left;font-size:8pt;
+    }
+
+    #searchbox input[type='text'] {
+        height:10px;font-size:7pt !important;
+    }
+
+    #searchbox fieldset legend span.icon {
+        position:relative;
+        top:10px;   
+        padding:20px 20px 0 0;
+        background:transparent url('/Content/images/search.png') center center no-repeat;
+    }
